# Generated BUILD file, see /tools/generate.js
load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//:__subpackages__"])

ng_module(
    name = "logging",
    srcs = [
        "index/index.component.ts",
        "logging.module.ts",
    ],
    assets = [
        "index/index.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "//src/app/logging/module0",
        "//src/app/logging/module1",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
    ],
)
