# Generated BUILD file, see /tools/generator
load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//:__subpackages__"])

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "logging",
    srcs = [
        "logging.module.ts",
        "index/index.component.ts",
    ],
    assets = [
        "index/index.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = NG_FACTORY_ADDED_IMPORTS + [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "//src/app/logging/module0",
        "//src/app/logging/module1",
        "//src/app/logging/module2",
        "//src/app/logging/module3",
        "//src/app/logging/module4",
        "//src/app/logging/module5",
        "//src/app/logging/module6",
        "//src/app/logging/module7",
        "//src/app/logging/module8",
        "//src/app/logging/module9",
    ],
)
    