# Generated BUILD file, see /tools/generator
load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//:__subpackages__"])

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "monitoring",
    srcs = [
        "monitoring.module.ts",
        "index/index.component.ts",
    ],
    assets = [
        "index/index.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = NG_FACTORY_ADDED_IMPORTS + [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "//src/app/monitoring/module0",
        "//src/app/monitoring/module1",
        "//src/app/monitoring/module2",
        "//src/app/monitoring/module3",
        "//src/app/monitoring/module4",
        "//src/app/monitoring/module5",
        "//src/app/monitoring/module6",
        "//src/app/monitoring/module7",
        "//src/app/monitoring/module8",
        "//src/app/monitoring/module9",
    ],
)
    