# Generated BUILD file, see /tools/generator
load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//:__subpackages__"])

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "networking",
    srcs = [
        "networking.module.ts",
        "index/index.component.ts",
    ],
    assets = [
        "index/index.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = NG_FACTORY_ADDED_IMPORTS + [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "//src/app/networking/module0",
        "//src/app/networking/module1",
        "//src/app/networking/module2",
        "//src/app/networking/module3",
        "//src/app/networking/module4",
        "//src/app/networking/module5",
        "//src/app/networking/module6",
        "//src/app/networking/module7",
        "//src/app/networking/module8",
        "//src/app/networking/module9",
    ],
)
    