# Generated BUILD file, see /tools/generator
load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//:__subpackages__"])

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "storage",
    srcs = [
        "storage.module.ts",
        "index/index.component.ts",
    ],
    assets = [
        "index/index.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = NG_FACTORY_ADDED_IMPORTS + [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "//src/app/storage/module0",
        "//src/app/storage/module1",
        "//src/app/storage/module2",
        "//src/app/storage/module3",
        "//src/app/storage/module4",
        "//src/app/storage/module5",
        "//src/app/storage/module6",
        "//src/app/storage/module7",
        "//src/app/storage/module8",
        "//src/app/storage/module9",
    ],
)
    