# Generated BUILD file, see /tools/generator
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")
load("@npm_bazel_karma//:defs.bzl", "ts_web_test_suite")
load("@npm_bazel_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "module0_styles",
    src = "cmp10/cmp10.component.scss",
)

sass_binary(
    name = "module1_styles",
    src = "cmp11/cmp11.component.scss",
)

sass_binary(
    name = "module2_styles",
    src = "cmp12/cmp12.component.scss",
)

sass_binary(
    name = "module3_styles",
    src = "cmp13/cmp13.component.scss",
)

sass_binary(
    name = "module4_styles",
    src = "cmp14/cmp14.component.scss",
)

sass_binary(
    name = "module5_styles",
    src = "cmp15/cmp15.component.scss",
)

sass_binary(
    name = "module6_styles",
    src = "cmp16/cmp16.component.scss",
)

sass_binary(
    name = "module7_styles",
    src = "cmp17/cmp17.component.scss",
)

sass_binary(
    name = "module8_styles",
    src = "cmp18/cmp18.component.scss",
)

sass_binary(
    name = "module9_styles",
    src = "cmp19/cmp19.component.scss",
)

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "module1",
    srcs = [
        "cmp10/cmp10.component.ts",
        "cmp11/cmp11.component.ts",
        "cmp12/cmp12.component.ts",
        "cmp13/cmp13.component.ts",
        "cmp14/cmp14.component.ts",
        "cmp15/cmp15.component.ts",
        "cmp16/cmp16.component.ts",
        "cmp17/cmp17.component.ts",
        "cmp18/cmp18.component.ts",
        "cmp19/cmp19.component.ts",
        "module1.module.ts",
    ],
    assets = [
        ":module0_styles",
        ":module1_styles",
        ":module2_styles",
        ":module3_styles",
        ":module4_styles",
        ":module5_styles",
        ":module6_styles",
        ":module7_styles",
        ":module8_styles",
        ":module9_styles",
        "cmp10/cmp10.component.html",
        "cmp11/cmp11.component.html",
        "cmp12/cmp12.component.html",
        "cmp13/cmp13.component.html",
        "cmp14/cmp14.component.html",
        "cmp15/cmp15.component.html",
        "cmp16/cmp16.component.html",
        "cmp17/cmp17.component.html",
        "cmp18/cmp18.component.html",
        "cmp19/cmp19.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "//src/shared/material",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["**/*.spec.ts"]),
    tsconfig = "//src:tsconfig-test",
    deps = [
        ":module1",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_web_test_suite(
    name = "test",
    # do not sort
    bootstrap = [
        "@npm//node_modules/zone.js:dist/zone-testing-bundle.js",
        "@npm//node_modules/reflect-metadata:Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
        # TODO(gregmagolan): re-enable firefox testing once fixed
        # See https://github.com/bazelbuild/rules_typescript/issues/296
        #"@io_bazel_rules_webtesting//browsers:firefox-local",
    ],
    runtime_deps = [
        "//src:initialize_testbed",
    ],
    deps = [
        ":test_lib",
        "//src:rxjs_umd_modules",
    ],
)
        