# Generated BUILD file, see /tools/generator
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")
load("@npm_bazel_karma//:defs.bzl", "ts_web_test_suite")
load("@npm_bazel_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "module0_styles",
    src = "cmp20/cmp20.component.scss",
)

sass_binary(
    name = "module1_styles",
    src = "cmp21/cmp21.component.scss",
)

sass_binary(
    name = "module2_styles",
    src = "cmp22/cmp22.component.scss",
)

sass_binary(
    name = "module3_styles",
    src = "cmp23/cmp23.component.scss",
)

sass_binary(
    name = "module4_styles",
    src = "cmp24/cmp24.component.scss",
)

sass_binary(
    name = "module5_styles",
    src = "cmp25/cmp25.component.scss",
)

sass_binary(
    name = "module6_styles",
    src = "cmp26/cmp26.component.scss",
)

sass_binary(
    name = "module7_styles",
    src = "cmp27/cmp27.component.scss",
)

sass_binary(
    name = "module8_styles",
    src = "cmp28/cmp28.component.scss",
)

sass_binary(
    name = "module9_styles",
    src = "cmp29/cmp29.component.scss",
)

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "module2",
    srcs = [
        "cmp20/cmp20.component.ts",
        "cmp21/cmp21.component.ts",
        "cmp22/cmp22.component.ts",
        "cmp23/cmp23.component.ts",
        "cmp24/cmp24.component.ts",
        "cmp25/cmp25.component.ts",
        "cmp26/cmp26.component.ts",
        "cmp27/cmp27.component.ts",
        "cmp28/cmp28.component.ts",
        "cmp29/cmp29.component.ts",
        "module2.module.ts",
    ],
    assets = [
        ":module0_styles",
        ":module1_styles",
        ":module2_styles",
        ":module3_styles",
        ":module4_styles",
        ":module5_styles",
        ":module6_styles",
        ":module7_styles",
        ":module8_styles",
        ":module9_styles",
        "cmp20/cmp20.component.html",
        "cmp21/cmp21.component.html",
        "cmp22/cmp22.component.html",
        "cmp23/cmp23.component.html",
        "cmp24/cmp24.component.html",
        "cmp25/cmp25.component.html",
        "cmp26/cmp26.component.html",
        "cmp27/cmp27.component.html",
        "cmp28/cmp28.component.html",
        "cmp29/cmp29.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "//src/shared/material",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["**/*.spec.ts"]),
    tsconfig = "//src:tsconfig-test",
    deps = [
        ":module2",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_web_test_suite(
    name = "test",
    # do not sort
    bootstrap = [
        "@npm//node_modules/zone.js:dist/zone-testing-bundle.js",
        "@npm//node_modules/reflect-metadata:Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
        # TODO(gregmagolan): re-enable firefox testing once fixed
        # See https://github.com/bazelbuild/rules_typescript/issues/296
        #"@io_bazel_rules_webtesting//browsers:firefox-local",
    ],
    runtime_deps = [
        "//src:initialize_testbed",
    ],
    deps = [
        ":test_lib",
        "//src:rxjs_umd_modules",
    ],
)
        