# Generated BUILD file, see /tools/generator
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")
load("@npm_bazel_karma//:defs.bzl", "ts_web_test_suite")
load("@npm_bazel_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "module0_styles",
    src = "cmp30/cmp30.component.scss",
)

sass_binary(
    name = "module1_styles",
    src = "cmp31/cmp31.component.scss",
)

sass_binary(
    name = "module2_styles",
    src = "cmp32/cmp32.component.scss",
)

sass_binary(
    name = "module3_styles",
    src = "cmp33/cmp33.component.scss",
)

sass_binary(
    name = "module4_styles",
    src = "cmp34/cmp34.component.scss",
)

sass_binary(
    name = "module5_styles",
    src = "cmp35/cmp35.component.scss",
)

sass_binary(
    name = "module6_styles",
    src = "cmp36/cmp36.component.scss",
)

sass_binary(
    name = "module7_styles",
    src = "cmp37/cmp37.component.scss",
)

sass_binary(
    name = "module8_styles",
    src = "cmp38/cmp38.component.scss",
)

sass_binary(
    name = "module9_styles",
    src = "cmp39/cmp39.component.scss",
)

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "module3",
    srcs = [
        "cmp30/cmp30.component.ts",
        "cmp31/cmp31.component.ts",
        "cmp32/cmp32.component.ts",
        "cmp33/cmp33.component.ts",
        "cmp34/cmp34.component.ts",
        "cmp35/cmp35.component.ts",
        "cmp36/cmp36.component.ts",
        "cmp37/cmp37.component.ts",
        "cmp38/cmp38.component.ts",
        "cmp39/cmp39.component.ts",
        "module3.module.ts",
    ],
    assets = [
        ":module0_styles",
        ":module1_styles",
        ":module2_styles",
        ":module3_styles",
        ":module4_styles",
        ":module5_styles",
        ":module6_styles",
        ":module7_styles",
        ":module8_styles",
        ":module9_styles",
        "cmp30/cmp30.component.html",
        "cmp31/cmp31.component.html",
        "cmp32/cmp32.component.html",
        "cmp33/cmp33.component.html",
        "cmp34/cmp34.component.html",
        "cmp35/cmp35.component.html",
        "cmp36/cmp36.component.html",
        "cmp37/cmp37.component.html",
        "cmp38/cmp38.component.html",
        "cmp39/cmp39.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "//src/shared/material",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["**/*.spec.ts"]),
    tsconfig = "//src:tsconfig-test",
    deps = [
        ":module3",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_web_test_suite(
    name = "test",
    # do not sort
    bootstrap = [
        "@npm//node_modules/zone.js:dist/zone-testing-bundle.js",
        "@npm//node_modules/reflect-metadata:Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
        # TODO(gregmagolan): re-enable firefox testing once fixed
        # See https://github.com/bazelbuild/rules_typescript/issues/296
        #"@io_bazel_rules_webtesting//browsers:firefox-local",
    ],
    runtime_deps = [
        "//src:initialize_testbed",
    ],
    deps = [
        ":test_lib",
        "//src:rxjs_umd_modules",
    ],
)
        