# Generated BUILD file, see /tools/generator
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")
load("@npm_bazel_karma//:defs.bzl", "ts_web_test_suite")
load("@npm_bazel_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "module0_styles",
    src = "cmp40/cmp40.component.scss",
)

sass_binary(
    name = "module1_styles",
    src = "cmp41/cmp41.component.scss",
)

sass_binary(
    name = "module2_styles",
    src = "cmp42/cmp42.component.scss",
)

sass_binary(
    name = "module3_styles",
    src = "cmp43/cmp43.component.scss",
)

sass_binary(
    name = "module4_styles",
    src = "cmp44/cmp44.component.scss",
)

sass_binary(
    name = "module5_styles",
    src = "cmp45/cmp45.component.scss",
)

sass_binary(
    name = "module6_styles",
    src = "cmp46/cmp46.component.scss",
)

sass_binary(
    name = "module7_styles",
    src = "cmp47/cmp47.component.scss",
)

sass_binary(
    name = "module8_styles",
    src = "cmp48/cmp48.component.scss",
)

sass_binary(
    name = "module9_styles",
    src = "cmp49/cmp49.component.scss",
)

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "module4",
    srcs = [
        "cmp40/cmp40.component.ts",
        "cmp41/cmp41.component.ts",
        "cmp42/cmp42.component.ts",
        "cmp43/cmp43.component.ts",
        "cmp44/cmp44.component.ts",
        "cmp45/cmp45.component.ts",
        "cmp46/cmp46.component.ts",
        "cmp47/cmp47.component.ts",
        "cmp48/cmp48.component.ts",
        "cmp49/cmp49.component.ts",
        "module4.module.ts",
    ],
    assets = [
        ":module0_styles",
        ":module1_styles",
        ":module2_styles",
        ":module3_styles",
        ":module4_styles",
        ":module5_styles",
        ":module6_styles",
        ":module7_styles",
        ":module8_styles",
        ":module9_styles",
        "cmp40/cmp40.component.html",
        "cmp41/cmp41.component.html",
        "cmp42/cmp42.component.html",
        "cmp43/cmp43.component.html",
        "cmp44/cmp44.component.html",
        "cmp45/cmp45.component.html",
        "cmp46/cmp46.component.html",
        "cmp47/cmp47.component.html",
        "cmp48/cmp48.component.html",
        "cmp49/cmp49.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "//src/shared/material",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["**/*.spec.ts"]),
    tsconfig = "//src:tsconfig-test",
    deps = [
        ":module4",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_web_test_suite(
    name = "test",
    # do not sort
    bootstrap = [
        "@npm//node_modules/zone.js:dist/zone-testing-bundle.js",
        "@npm//node_modules/reflect-metadata:Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
        # TODO(gregmagolan): re-enable firefox testing once fixed
        # See https://github.com/bazelbuild/rules_typescript/issues/296
        #"@io_bazel_rules_webtesting//browsers:firefox-local",
    ],
    runtime_deps = [
        "//src:initialize_testbed",
    ],
    deps = [
        ":test_lib",
        "//src:rxjs_umd_modules",
    ],
)
        