# Generated BUILD file, see /tools/generator
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")
load("@npm_bazel_karma//:defs.bzl", "ts_web_test_suite")
load("@npm_bazel_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "module0_styles",
    src = "cmp60/cmp60.component.scss",
)

sass_binary(
    name = "module1_styles",
    src = "cmp61/cmp61.component.scss",
)

sass_binary(
    name = "module2_styles",
    src = "cmp62/cmp62.component.scss",
)

sass_binary(
    name = "module3_styles",
    src = "cmp63/cmp63.component.scss",
)

sass_binary(
    name = "module4_styles",
    src = "cmp64/cmp64.component.scss",
)

sass_binary(
    name = "module5_styles",
    src = "cmp65/cmp65.component.scss",
)

sass_binary(
    name = "module6_styles",
    src = "cmp66/cmp66.component.scss",
)

sass_binary(
    name = "module7_styles",
    src = "cmp67/cmp67.component.scss",
)

sass_binary(
    name = "module8_styles",
    src = "cmp68/cmp68.component.scss",
)

sass_binary(
    name = "module9_styles",
    src = "cmp69/cmp69.component.scss",
)

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "module6",
    srcs = [
        "cmp60/cmp60.component.ts",
        "cmp61/cmp61.component.ts",
        "cmp62/cmp62.component.ts",
        "cmp63/cmp63.component.ts",
        "cmp64/cmp64.component.ts",
        "cmp65/cmp65.component.ts",
        "cmp66/cmp66.component.ts",
        "cmp67/cmp67.component.ts",
        "cmp68/cmp68.component.ts",
        "cmp69/cmp69.component.ts",
        "module6.module.ts",
    ],
    assets = [
        ":module0_styles",
        ":module1_styles",
        ":module2_styles",
        ":module3_styles",
        ":module4_styles",
        ":module5_styles",
        ":module6_styles",
        ":module7_styles",
        ":module8_styles",
        ":module9_styles",
        "cmp60/cmp60.component.html",
        "cmp61/cmp61.component.html",
        "cmp62/cmp62.component.html",
        "cmp63/cmp63.component.html",
        "cmp64/cmp64.component.html",
        "cmp65/cmp65.component.html",
        "cmp66/cmp66.component.html",
        "cmp67/cmp67.component.html",
        "cmp68/cmp68.component.html",
        "cmp69/cmp69.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "//src/shared/material",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["**/*.spec.ts"]),
    tsconfig = "//src:tsconfig-test",
    deps = [
        ":module6",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_web_test_suite(
    name = "test",
    # do not sort
    bootstrap = [
        "@npm//node_modules/zone.js:dist/zone-testing-bundle.js",
        "@npm//node_modules/reflect-metadata:Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
        # TODO(gregmagolan): re-enable firefox testing once fixed
        # See https://github.com/bazelbuild/rules_typescript/issues/296
        #"@io_bazel_rules_webtesting//browsers:firefox-local",
    ],
    runtime_deps = [
        "//src:initialize_testbed",
    ],
    deps = [
        ":test_lib",
        "//src:rxjs_umd_modules",
    ],
)
        