# Generated BUILD file, see /tools/generator
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")
load("@npm_bazel_karma//:defs.bzl", "ts_web_test_suite")
load("@npm_bazel_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "module0_styles",
    src = "cmp70/cmp70.component.scss",
)

sass_binary(
    name = "module1_styles",
    src = "cmp71/cmp71.component.scss",
)

sass_binary(
    name = "module2_styles",
    src = "cmp72/cmp72.component.scss",
)

sass_binary(
    name = "module3_styles",
    src = "cmp73/cmp73.component.scss",
)

sass_binary(
    name = "module4_styles",
    src = "cmp74/cmp74.component.scss",
)

sass_binary(
    name = "module5_styles",
    src = "cmp75/cmp75.component.scss",
)

sass_binary(
    name = "module6_styles",
    src = "cmp76/cmp76.component.scss",
)

sass_binary(
    name = "module7_styles",
    src = "cmp77/cmp77.component.scss",
)

sass_binary(
    name = "module8_styles",
    src = "cmp78/cmp78.component.scss",
)

sass_binary(
    name = "module9_styles",
    src = "cmp79/cmp79.component.scss",
)

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "module7",
    srcs = [
        "cmp70/cmp70.component.ts",
        "cmp71/cmp71.component.ts",
        "cmp72/cmp72.component.ts",
        "cmp73/cmp73.component.ts",
        "cmp74/cmp74.component.ts",
        "cmp75/cmp75.component.ts",
        "cmp76/cmp76.component.ts",
        "cmp77/cmp77.component.ts",
        "cmp78/cmp78.component.ts",
        "cmp79/cmp79.component.ts",
        "module7.module.ts",
    ],
    assets = [
        ":module0_styles",
        ":module1_styles",
        ":module2_styles",
        ":module3_styles",
        ":module4_styles",
        ":module5_styles",
        ":module6_styles",
        ":module7_styles",
        ":module8_styles",
        ":module9_styles",
        "cmp70/cmp70.component.html",
        "cmp71/cmp71.component.html",
        "cmp72/cmp72.component.html",
        "cmp73/cmp73.component.html",
        "cmp74/cmp74.component.html",
        "cmp75/cmp75.component.html",
        "cmp76/cmp76.component.html",
        "cmp77/cmp77.component.html",
        "cmp78/cmp78.component.html",
        "cmp79/cmp79.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "//src/shared/material",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["**/*.spec.ts"]),
    tsconfig = "//src:tsconfig-test",
    deps = [
        ":module7",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_web_test_suite(
    name = "test",
    # do not sort
    bootstrap = [
        "@npm//node_modules/zone.js:dist/zone-testing-bundle.js",
        "@npm//node_modules/reflect-metadata:Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
        # TODO(gregmagolan): re-enable firefox testing once fixed
        # See https://github.com/bazelbuild/rules_typescript/issues/296
        #"@io_bazel_rules_webtesting//browsers:firefox-local",
    ],
    runtime_deps = [
        "//src:initialize_testbed",
    ],
    deps = [
        ":test_lib",
        "//src:rxjs_umd_modules",
    ],
)
        