# Generated BUILD file, see /tools/generator
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")
load("@npm_bazel_karma//:defs.bzl", "ts_web_test_suite")
load("@npm_bazel_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "module0_styles",
    src = "cmp80/cmp80.component.scss",
)

sass_binary(
    name = "module1_styles",
    src = "cmp81/cmp81.component.scss",
)

sass_binary(
    name = "module2_styles",
    src = "cmp82/cmp82.component.scss",
)

sass_binary(
    name = "module3_styles",
    src = "cmp83/cmp83.component.scss",
)

sass_binary(
    name = "module4_styles",
    src = "cmp84/cmp84.component.scss",
)

sass_binary(
    name = "module5_styles",
    src = "cmp85/cmp85.component.scss",
)

sass_binary(
    name = "module6_styles",
    src = "cmp86/cmp86.component.scss",
)

sass_binary(
    name = "module7_styles",
    src = "cmp87/cmp87.component.scss",
)

sass_binary(
    name = "module8_styles",
    src = "cmp88/cmp88.component.scss",
)

sass_binary(
    name = "module9_styles",
    src = "cmp89/cmp89.component.scss",
)

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "module8",
    srcs = [
        "cmp80/cmp80.component.ts",
        "cmp81/cmp81.component.ts",
        "cmp82/cmp82.component.ts",
        "cmp83/cmp83.component.ts",
        "cmp84/cmp84.component.ts",
        "cmp85/cmp85.component.ts",
        "cmp86/cmp86.component.ts",
        "cmp87/cmp87.component.ts",
        "cmp88/cmp88.component.ts",
        "cmp89/cmp89.component.ts",
        "module8.module.ts",
    ],
    assets = [
        ":module0_styles",
        ":module1_styles",
        ":module2_styles",
        ":module3_styles",
        ":module4_styles",
        ":module5_styles",
        ":module6_styles",
        ":module7_styles",
        ":module8_styles",
        ":module9_styles",
        "cmp80/cmp80.component.html",
        "cmp81/cmp81.component.html",
        "cmp82/cmp82.component.html",
        "cmp83/cmp83.component.html",
        "cmp84/cmp84.component.html",
        "cmp85/cmp85.component.html",
        "cmp86/cmp86.component.html",
        "cmp87/cmp87.component.html",
        "cmp88/cmp88.component.html",
        "cmp89/cmp89.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "//src/shared/material",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["**/*.spec.ts"]),
    tsconfig = "//src:tsconfig-test",
    deps = [
        ":module8",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_web_test_suite(
    name = "test",
    # do not sort
    bootstrap = [
        "@npm//node_modules/zone.js:dist/zone-testing-bundle.js",
        "@npm//node_modules/reflect-metadata:Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
        # TODO(gregmagolan): re-enable firefox testing once fixed
        # See https://github.com/bazelbuild/rules_typescript/issues/296
        #"@io_bazel_rules_webtesting//browsers:firefox-local",
    ],
    runtime_deps = [
        "//src:initialize_testbed",
    ],
    deps = [
        ":test_lib",
        "//src:rxjs_umd_modules",
    ],
)
        