# Generated BUILD file, see /tools/generator
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")
load("@npm_bazel_karma//:defs.bzl", "ts_web_test_suite")
load("@npm_bazel_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "module0_styles",
    src = "cmp100/cmp100.component.scss",
)

sass_binary(
    name = "module1_styles",
    src = "cmp101/cmp101.component.scss",
)

sass_binary(
    name = "module2_styles",
    src = "cmp102/cmp102.component.scss",
)

sass_binary(
    name = "module3_styles",
    src = "cmp103/cmp103.component.scss",
)

sass_binary(
    name = "module4_styles",
    src = "cmp104/cmp104.component.scss",
)

sass_binary(
    name = "module5_styles",
    src = "cmp105/cmp105.component.scss",
)

sass_binary(
    name = "module6_styles",
    src = "cmp106/cmp106.component.scss",
)

sass_binary(
    name = "module7_styles",
    src = "cmp107/cmp107.component.scss",
)

sass_binary(
    name = "module8_styles",
    src = "cmp108/cmp108.component.scss",
)

sass_binary(
    name = "module9_styles",
    src = "cmp109/cmp109.component.scss",
)

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "module0",
    srcs = [
        "cmp100/cmp100.component.ts",
        "cmp101/cmp101.component.ts",
        "cmp102/cmp102.component.ts",
        "cmp103/cmp103.component.ts",
        "cmp104/cmp104.component.ts",
        "cmp105/cmp105.component.ts",
        "cmp106/cmp106.component.ts",
        "cmp107/cmp107.component.ts",
        "cmp108/cmp108.component.ts",
        "cmp109/cmp109.component.ts",
        "module0.module.ts",
    ],
    assets = [
        ":module0_styles",
        ":module1_styles",
        ":module2_styles",
        ":module3_styles",
        ":module4_styles",
        ":module5_styles",
        ":module6_styles",
        ":module7_styles",
        ":module8_styles",
        ":module9_styles",
        "cmp100/cmp100.component.html",
        "cmp101/cmp101.component.html",
        "cmp102/cmp102.component.html",
        "cmp103/cmp103.component.html",
        "cmp104/cmp104.component.html",
        "cmp105/cmp105.component.html",
        "cmp106/cmp106.component.html",
        "cmp107/cmp107.component.html",
        "cmp108/cmp108.component.html",
        "cmp109/cmp109.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "//src/shared/material",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["**/*.spec.ts"]),
    tsconfig = "//src:tsconfig-test",
    deps = [
        ":module0",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_web_test_suite(
    name = "test",
    # do not sort
    bootstrap = [
        "@npm//node_modules/zone.js:dist/zone-testing-bundle.js",
        "@npm//node_modules/reflect-metadata:Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
        # TODO(gregmagolan): re-enable firefox testing once fixed
        # See https://github.com/bazelbuild/rules_typescript/issues/296
        #"@io_bazel_rules_webtesting//browsers:firefox-local",
    ],
    runtime_deps = [
        "//src:initialize_testbed",
    ],
    deps = [
        ":test_lib",
        "//src:rxjs_umd_modules",
    ],
)
        