# Generated BUILD file, see /tools/generator
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")
load("@npm_bazel_karma//:defs.bzl", "ts_web_test_suite")
load("@npm_bazel_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "module0_styles",
    src = "cmp110/cmp110.component.scss",
)

sass_binary(
    name = "module1_styles",
    src = "cmp111/cmp111.component.scss",
)

sass_binary(
    name = "module2_styles",
    src = "cmp112/cmp112.component.scss",
)

sass_binary(
    name = "module3_styles",
    src = "cmp113/cmp113.component.scss",
)

sass_binary(
    name = "module4_styles",
    src = "cmp114/cmp114.component.scss",
)

sass_binary(
    name = "module5_styles",
    src = "cmp115/cmp115.component.scss",
)

sass_binary(
    name = "module6_styles",
    src = "cmp116/cmp116.component.scss",
)

sass_binary(
    name = "module7_styles",
    src = "cmp117/cmp117.component.scss",
)

sass_binary(
    name = "module8_styles",
    src = "cmp118/cmp118.component.scss",
)

sass_binary(
    name = "module9_styles",
    src = "cmp119/cmp119.component.scss",
)

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "module1",
    srcs = [
        "cmp110/cmp110.component.ts",
        "cmp111/cmp111.component.ts",
        "cmp112/cmp112.component.ts",
        "cmp113/cmp113.component.ts",
        "cmp114/cmp114.component.ts",
        "cmp115/cmp115.component.ts",
        "cmp116/cmp116.component.ts",
        "cmp117/cmp117.component.ts",
        "cmp118/cmp118.component.ts",
        "cmp119/cmp119.component.ts",
        "module1.module.ts",
    ],
    assets = [
        ":module0_styles",
        ":module1_styles",
        ":module2_styles",
        ":module3_styles",
        ":module4_styles",
        ":module5_styles",
        ":module6_styles",
        ":module7_styles",
        ":module8_styles",
        ":module9_styles",
        "cmp110/cmp110.component.html",
        "cmp111/cmp111.component.html",
        "cmp112/cmp112.component.html",
        "cmp113/cmp113.component.html",
        "cmp114/cmp114.component.html",
        "cmp115/cmp115.component.html",
        "cmp116/cmp116.component.html",
        "cmp117/cmp117.component.html",
        "cmp118/cmp118.component.html",
        "cmp119/cmp119.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "//src/shared/material",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["**/*.spec.ts"]),
    tsconfig = "//src:tsconfig-test",
    deps = [
        ":module1",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_web_test_suite(
    name = "test",
    # do not sort
    bootstrap = [
        "@npm//node_modules/zone.js:dist/zone-testing-bundle.js",
        "@npm//node_modules/reflect-metadata:Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
        # TODO(gregmagolan): re-enable firefox testing once fixed
        # See https://github.com/bazelbuild/rules_typescript/issues/296
        #"@io_bazel_rules_webtesting//browsers:firefox-local",
    ],
    runtime_deps = [
        "//src:initialize_testbed",
    ],
    deps = [
        ":test_lib",
        "//src:rxjs_umd_modules",
    ],
)
        